align pics and fix bugs

--- a/css/application.css
+++ b/css/application.css
@@ -2,9 +2,9 @@ body {
 	padding: 40px;
 }
 
-/*.jumbotron {
+.jumbotron {
 	text-align: center;
-}*/
+}
 
 form {
 	text-align: center;
@@ -18,6 +18,48 @@ form {
 	text-align: center;
 }*/
 
+ul li {
+  list-style-type: none;
+}
+
+
+a {
+  color: #3f8abf;
+  line-height: 1.4;
+  text-decoration: none;
+}
+
+  #photos .image {
+  display: block;
+  min-height: 240px;
+  background: #edeff0;
+  text-align: center;
+  height: 260px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+  border-radius: 5px;
+  -webkit-transition: 0.3s;
+  -moz-transition: 0.3s;
+  -o-transition: 0.3s;
+  transition: 0.3s;
+}
+
+#photos img {
+  max-width: 80%;
+  max-height: 200px;
+  text-align: center;
+  -webkit-box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.2);
+  }
+
+#photos li {
+  margin: 30px 0 0;
+  vertical-align: middle;
+  }
+
 #overlay {
   background:rgba(0,0,0,0.7);
   width:100%;
@@ -29,7 +71,12 @@ form {
   text-align:center;
 }
 
-.grid-25 {
+a img {
+  border: none;
+  text-align: center;
+}
+
+/*.grid-25 {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
@@ -40,4 +87,4 @@ form {
  .tablet-grid-50 {
     float: left;
     width: 50%;
-  }
+  }*/
